# ai-runtime

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  PROJECT_CONTEXT.MD  PUBLISHING.md  README.md  copilot-agentic-research.md  pyproject.toml
ai_runtime/: __init__.py  cli.py  compat.py  exceptions.py  runtime.py
ai_runtime/agents/: __init__.py  agent.py  builtin.py  config_files.py  modes.py  runner.py  self_agentic.py  subagent.py  types.py
ai_runtime/commands/: __init__.py  builtin.py  registry.py
ai_runtime/context/: __init__.py  window.py
ai_runtime/conversation/: __init__.py  conversation.py  enums.py  message.py  request.py  response.py
ai_runtime/docs/: provider_contract.md
ai_runtime/eventing/: __init__.py
ai_runtime/events/: __init__.py  bus.py
ai_runtime/execution/: __init__.py  background.py  context.py  engine.py  event_processor.py  executor.py  hooks.py  mode.py  plan.py  result.py
ai_runtime/mcp/: __init__.py  adapter.py  client.py
ai_runtime/memory/: __init__.py  conversation_memory.py  semantic.py  store.py
ai_runtime/models/: __init__.py  capability.py  enums.py  provider.py  request.py  response.py  usage.py
docs/: adapter_tutorial.md  examples.md  migration_guide.md  release_checklist.md
scripts/: _common.sh  build.sh  install_web.sh  publish.sh  test.sh  verify_package.sh
tests/: conftest.py  test_compat.py  test_p1_capabilities.py  test_p2_contract.py  test_provider_config.py
web/: CHANGELOG.md  README.md  UI_UX_GAP_ANALYSIS_AND_PLAN.md  app.py  config.py  managers.py  requirements.txt  run.py
web/static/: app.js  (+2 more)
(+141 files in other folders)
