[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-runtime"
version = "0.4.0"
description = "Provider-agnostic AI Runtime SDK"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

authors = [
    {name = "Kirit Vaghela"}
]

dependencies = [
    "litellm>=1.75",
    "pydantic>=2.8.0",
    "httpx>=0.28"
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["ai_runtime*"]